--- a/WMS_Lists/WMS_Lists/appsettings.json
+++ b/WMS_Lists/WMS_Lists/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=10.2.1.6;Database=FactoryTalkTest;User ID= millft; Password = Seah2020!; Trusted_Connection=True;TrustServerCertificate=True; Integrated Security=False;"
+    "DefaultConnection": "Server=10.2.1.6;Database=FactoryTalkTest;User ID= millft; Password = Seah2020!; Trusted_Connection=True;TrustServerCertificate=True; Integrated Security=False;",
+    "SecondConnection": "Server=10.10.2.18\\MAIRSQL;Database=MAIR;User ID= mairdb_admin; Password = ServerMair2024 ; Trusted_Connection=True;TrustServerCertificate=True; Integrated Security=False;"
   },
   "Logging": {
     "LogLevel": {
